--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,8 +12,10 @@
 <link rel="stylesheet" href="app-content/css/font-awesome.min.css">
 
 <!-- Ionicons -->
+	<!-- Ionicons -->
 <link rel="stylesheet" href="app-content/css/ionicons.css">
 <!-- Theme style -->
+	<!-- Theme style -->
 <link rel="stylesheet" href="app-content/css/AdminLTE.css">
 <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
